--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,6 +35,8 @@ jobs:
     runs-on: self-hosted
     needs: cache
     steps:
+      - name: Build with Maven
+        run: mvn -B package -Pcoverage
       - name: Generate JaCoCo badge
         id: jacoco
         uses: cicirello/jacoco-badge-generator@v2
